[gd_scene load_steps=5 format=2]

[ext_resource path="res://fonts/Orbitron/static/Orbitron-ExtraBold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ui/DefaultTheme.tres" type="Theme" id=2]
[ext_resource path="res://ui/GameOverMenu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
margin_left = 309.0
margin_top = 202.0
margin_right = 715.0
margin_bottom = 367.0
size_flags_horizontal = 4
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
text = "Game Over
"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 371.0
margin_right = 1024.0
margin_bottom = 398.0
alignment = 1

[node name="Retry" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 390.0
margin_right = 452.0
margin_bottom = 27.0
theme = ExtResource( 2 )
text = "Retry"

[node name="LevelSelect" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 456.0
margin_right = 582.0
margin_bottom = 27.0
theme = ExtResource( 2 )
text = "Level Select"

[node name="Quit" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 586.0
margin_right = 633.0
margin_bottom = 27.0
theme = ExtResource( 2 )
text = "Quit"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Retry" to="." method="_on_Retry_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/LevelSelect" to="." method="_on_LevelSelect_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Quit" to="." method="_on_Quit_pressed"]
